[tool.poetry]
name = "hookbucket-backend"
version = "0.1.0"
description = ""
authors = ["iszk yohsuke <y@nemui.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
chalice = "^1.29.0"
pydantic = "^2.3.0"
toml = "^0.10.2"
returns = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
